@@ -86,6 +86,15 @@
              <action dev="jochen" type="add" issue="CODEC-69" due-to="Julius Davies">
                   Streaming Base64 (Base64InputStream and Base64OutputStream added).
              </action>
+             <action dev="ggregory" type="fix" issue="CODEC-78" due-to="Julius Davies">
+                 Base64: Improve Code Coverage
+             </action>
+             <action dev="ggregory" type="add" issue="CODEC-59" due-to="Julius Davies">
+                 Add methods to Base64 which work with String instead of byte[]
+             </action>
+             <action dev="ggregory" type="fix" issue="CODEC-81" due-to="Julius Davies">
+                 Base64's new constructor parameters ignored
+             </action>
 		</release>
 		<release version="1.3" date="10 July 2004" description="Feature and fix release.">
 			<action dev="ggregory, tobrien" type="add" issue="CODEC-21" due-to="Alex Karasulu">
