@@ -23,6 +23,7 @@ o [CODEC-60] Implement Caverphone.
 o [CODEC-52] Digest on InputStreams.
 o [CODEC-39] DigestUtils: Add methods for SHA-256, SHA-384, and SHA-512.
 o [CODEC-69] Streaming Base64 (Base64InputStream and Base64OutputStream added).
+o [CODEC-59] Add methods to Base64 which work with String instead of byte[]
 
   Fixed bugs:
 
@@ -39,6 +40,8 @@ o [CODEC-51] Test failures in SoundexTest
 o [CODEC-10] Using US_ENGLISH in Soundex caused an NullPointerException.
 o [CODEC-6]  Source tarball spews files all over the place.
 o [CODEC-22] Base64.isArrayByteBase64() throws an ArrayIndexOutOfBoundsException for negative octets
+o [CODEC-78] Base64: Improve Code Coverage
+o [CODEC-81] Base64's new constructor parameters ignored
 
   Changes:
 
